--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ configurations {
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
-    
+ 	compile('com.google.code.gson:gson:2.3')     
     compile("org.springframework.plugin:spring-plugin-core:1.1.0.RELEASE")
     compile("com.jayway.jsonpath:json-path:0.9.1")
     testCompile("org.springframework.boot:spring-boot-starter-test")
