commit before merge to single repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.jpa.show-sql: true
 //spring.datasource.schema: classpath*:initDB.sql
 //spring.datasource.data: classpath*:populateDB.sql
 spring.jpa.hibernate.ddl-auto=create
+
+
+ZERO_COUNT=0
+ENTITY_TYPE_CUSTOMER=1
+ENTITY_TYPE_VENDOR=2
+ENTITY_TYPE_PRIMARY=1
+ENTITY_TYPE_SECONDARY=2
+UPDATE_SUCESS=1
+UPDATED_BY_CUST_ONLINE=CUST_ONLINE
