--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -5,3 +5,5 @@ spring.datasource.password=dinesh
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
+//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+//spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
