--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'spring-boot'
+apply plugin: 'war'
+
+
 buildscript {
     repositories {
         maven { url "http://repo.spring.io/libs-release" }
@@ -9,11 +16,16 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'spring-boot'
-apply plugin: 'war'
+
+sourceSets {
+    generated {
+        java {
+            srcDirs = ['src/main/generated']
+        }
+    }
+}
+
+
 
 jar {
     baseName = 'gs-accessing-data-jpa'
@@ -29,6 +41,7 @@ repositories {
 
 configurations {
     providedRuntime
+  	querydslapt
 }
 
 dependencies {
@@ -43,6 +56,8 @@ dependencies {
 	
 	compile('org.glassfish:javax.json:1.0.4')
 	
+	compile ("com.mysema.querydsl:querydsl-jpa:3.6.0")
+	compile ('com.mysema.querydsl:querydsl-apt:3.6.0')
 	
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile('org.hsqldb:hsqldb:2.0.0')
@@ -50,6 +65,31 @@ dependencies {
     
 }
 
+task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
+    source = sourceSets.main.java
+    classpath = configurations.compile + configurations.querydslapt
+    options.compilerArgs = [
+            "-proc:only",
+            "-processor", "com.mysema.query.apt.jpa.JPAAnnotationProcessor"
+    ]
+    destinationDir = sourceSets.generated.java.srcDirs.iterator().next()
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.11'
+}
+
+compileJava {
+    dependsOn generateQueryDSL
+    source generateQueryDSL.destinationDir
+}
+ 
+compileGeneratedJava {
+    dependsOn generateQueryDSL
+    options.warnings = false
+    classpath += sourceSets.main.runtimeClasspath
+}
+ 
+clean {
+    delete sourceSets.generated.java.srcDirs
 }
