--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql: true
 //spring.datasource.schema: classpath*:initDB.sql
 //spring.datasource.data: classpath*:populateDB.sql
 spring.jpa.hibernate.ddl-auto=create
-
+logging.level.*= INFO
 
 ZERO_COUNT=0
 ENTITY_TYPE_CUSTOMER=1
