--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -1,7 +1,7 @@
 server.port=9090
 spring.datasource.url=jdbc:mysql://localhost/spring
 spring.datasource.username=root
-spring.datasource.password=dinesh
+spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: false
