--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ sourceSets {
 
 
 war {
-    baseName = 'gs-accessing-data-jpa'
-    version =  '0.1.0'
+    baseName = 'ProjectxDataJPA'
+    version =  '0.1.1'
 }
 
 repositories {
