--- a/src/main/resources/application-Dev.properties
+++ b/src/main/resources/application-Dev.properties
@@ -4,4 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql: false
+spring.jpa.show-sql: true
+//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+//spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
