--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -1,9 +1,7 @@
 server.port=9090
-spring.datasource.url=jdbc:mysql://localhost/spring
+spring.datasource.url=jdbc:mysql://localhost/prod
 spring.datasource.username=root
 spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: false
-//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-//spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
