Commit before base code cleanUp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.profiles.active=Prod
+spring.profiles.active=Dev
 spring.jpa.show-sql: true
 //spring.datasource.schema: classpath*:initDB.sql
 //spring.datasource.data: classpath*:populateDB.sql
@@ -9,8 +9,17 @@ logging.level.*= INFO
 ZERO_COUNT=0
 ENTITY_TYPE_CUSTOMER=1
 ENTITY_TYPE_VENDOR=2
+ENTITY_TYPE_DRIVER=3
+ENTITY_TYPE_VENDORDRIVER=4
+
 ENTITY_TYPE_PRIMARY=1
 ENTITY_TYPE_SECONDARY=2
 UPDATE_SUCESS=1
 UPDATED_BY_CUST_ONLINE=CUST_ONLINE
 PASSWORD_TYPE_DEFAULT=Default
+FREIGHTSTATUS_BLOCKED=BLOCKED
+FREIGHTSTATUS_NEW=NEW
+FREIGHTSTATUS_BOOKED=BOOKED
+FREIGHTALLOCATIONSTATUS_RESPONDED=RESPONDED
+FREIGHTALLOCATIONSTATUS_NEW=NEW
+FREIGHTALLOCATIONSTATUS_BOOKED=BOOKED
