--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost/prod
 spring.datasource.username=root
 spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql: false
