commit before fine grain exception propogation code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ FREIGHTSTATUS_BOOKED=BOOKED
 FREIGHTALLOCATIONSTATUS_RESPONDED=RESPONDED
 FREIGHTALLOCATIONSTATUS_NEW=NEW
 FREIGHTALLOCATIONSTATUS_BOOKED=BOOKED
+
+
+ACTOR_ENTITY_SELF_WEB=1
+ACTOR_ENTITY_SELF_APP=2
+ACTOR_ENTITY_SELF_FREIGHT_RES_SYS=3
