--- a/src/main/resources/application-Dev.properties
+++ b/src/main/resources/application-Dev.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.datasource.url=jdbc:mysql://localhost/spring
+spring.datasource.url=jdbc:mysql://localhost/prod
 spring.datasource.username=root
 spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
