--- a/src/main/resources/application-Prod.properties
+++ b/src/main/resources/application-Prod.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost/prod
 spring.datasource.username=root
 spring.datasource.password=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql: false
