Commit with fine grain error propogation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,14 @@ ACTOR_ENTITY_SELF_WEB=1
 ACTOR_ENTITY_SELF_APP=2
 ACTOR_ENTITY_SELF_FREIGHT_RES_SYS=3
 
+MOBILE_ALREADY_REPORTED=MOBILE_
+EMAIL_ALREADY_REPORTED=EMAIL_
+SEC_MOBILE_ALREADY_REPORTED=SEC_MOBILE_
+MOBILE_DUE_TO_UPDATE_INCONSISTENCY_ALREADY_REPORTED=MOBILE_DUE_TO_UPDATE_INCONSISTENCY_
+EMAIL_DUE_TO_UPDATE_INCONSISTENCY_ALREADY_REPORTED=EMAIL_DUE_TO_UPDATE_INCONSISTENCY_
+ALREADY_REPORTED=ALREADY_REPORTED
+
+REGISTRATION_NUMBER_ALREADY_REPORTED=REGISTRATION_NUMBER_
+CHASIS_NUMBER_ALREADY_REPORTED=CHASIS_NUMBER_
+
+DRIVING_LICENCE_ALREADY_REPORTED=DRIVING_LICENCE_
