commit with stable code before security implementaion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,12 @@ MOBILE_DUE_TO_UPDATE_INCONSISTENCY_ALREADY_REPORTED=MOBILE_DUE_TO_UPDATE_INCONSI
 EMAIL_DUE_TO_UPDATE_INCONSISTENCY_ALREADY_REPORTED=EMAIL_DUE_TO_UPDATE_INCONSISTENCY_
 ALREADY_REPORTED=ALREADY_REPORTED
 
+
 REGISTRATION_NUMBER_ALREADY_REPORTED=REGISTRATION_NUMBER_
 CHASIS_NUMBER_ALREADY_REPORTED=CHASIS_NUMBER_
 
 DRIVING_LICENCE_ALREADY_REPORTED=DRIVING_LICENCE_
+
+VEHICLE_DETAILS_NOT_FOUND_BY_REGISTRATION_NUMBER=VEHICLE_DETAILS_NOT_FOUND_BY_REGISTRATION_NUMBER
+FREIGHT_REQUEST_BY_VENDOR_BY_ID_NOT_FOUND=FREIGHT_REQUEST_BY_VENDOR_BY_ID_NOT_FOUND
+FREIGHT_REQUEST_BY_CUSTOMER_BY_ID_NOT_FOUND=FREIGHT_REQUEST_BY_CUSTOMER_BY_ID_NOT_FOUND
